# ai-dotfiles

./: .gitignore  AGENTS.md  README  README.org  sprachspiel-config.toml.bak  sprachspiel-models.toml.bak
.hermes/plans/: 2026-05-15_voice-clone-tui.md
configs/ask-ai/: PEPE.md  SOUL.md  SPRACH.md  config.toml  models.toml  tools.toml
configs/claude-code/: README.md  claude-local  settings.json
configs/cline/: README.md  cline_mcp_settings.json  providers.json
configs/codex/: README.org  config.toml
configs/copilot-cli/: copilot-local
configs/crush/: crush.json
configs/droid/: mcp.json  settings.json
configs/goose/: README.org  config.yaml
configs/hermes-workspace/: docker-compose.yml
configs/homepage-navi/: bookmarks.yaml  services.yaml  settings.yaml  status-server.py  widgets.yaml
configs/nanocoder/: .mcp.json  README.org  agents.config.json
configs/omp/: config.yml  mcp.json  models.yml
configs/open-webui/: docker-compose.yml  models.json  (+2 more)
diffuse/: .gitignore  PLANS-ideogram4.md  REACTIVATE-IDEOGRAM.md  README.md  download-model.sh  generate.py  generate.py.bak  pyproject.toml  run.sh
diffuse/diffuse/: __init__.py  __main__.py  cli.py  enhance.py  llm.py  models.py  output.py  paths.py  prompts.py
diffuse/diffuse/backends/: __init__.py  bonsai.py  framepack.py  gemlite.py  hidream.py  lingbot.py  sd_cpp.py
diffuse/prompts/: edit_enhance.yaml  edit_vision.yaml  ideogram_enhance.yaml  video_enhance.yaml  vision_analysis.yaml  vision_enhance.yaml
diffuse/scripts/: bonsai_runner.py  lingbot_runner.py
diffuse/scripts/install/: bonsai.sh  hidream.sh  z-image.sh
docs/: model-research-2026-04-02.md
llama-swap/: ARCHITECTURE.md  MODEL_CATALOG.md  MTP-NOTES.md  README.md  add_capabilities.py  bonsai_bench.py  build-config.py  config-base.yaml  config-footer.yaml  config.yaml  download-models.sh  llama-swap-cli  llama-swap.service.template  run.sh  turboquant-bench.sh  turboquant_bench.py  turboquant_bench_v2.py
llama-swap/testchat/: .gitignore  DEPENDENCIES.md  README.md  main.py  pyproject.toml  tools.py
magenta-rt/: .gitignore  README.md  generate.py  pyproject.toml  run.sh
modelfiles/: Makefile  assistant-pepe.modelfile  bonsai-4b.modelfile  bonsai-8b.modelfile  cogito.modelfile  deepseek-coder-v2.modelfile  deepseek-r1-7b.modelfile  devstral-small-2.modelfile  falcon3-1b.modelfile  falcon3-3b.modelfile  gemma4-abliterated-e4b.modelfile  gemma4-e2b.modelfile  gemma4-e4b.modelfile  glm-4.7-flash.modelfile  gpt-oss.modelfile  granite3.3-8b.modelfile  hermes2-pro-mistral-7b.modelfile  hermes3-llama3.2-3b-fc.modelfile  hermes3-llama3.2-3b.modelfile  hermes3.modelfile  hermes4.modelfile  huihui-4-8b.modelfile  jan-code.modelfile  laguna-xs2.modelfile  lfm2.5-1.2b-nova-fc.modelfile  lfm2.5-350m.modelfile  lfm2.5-thinking.modelfile  lfm2.modelfile  llama3.2.modelfile  llava-7b.modelfile  medgemma1.5-4b.modelfile  ministral-3b.modelfile  ministral.modelfile  mistral-nemo.modelfile  mistral-small.modelfile  mistral-small3.2.modelfile  mistral.modelfile  nanbeige4-thinking-3b.modelfile  nanbeige4.1-3b.modelfile  nemotron-3-nano-4b.modelfile  (+21 more)
openscience/: .env.example  Dockerfile  README.md  docker-compose.yml
parakeet-stt/: README.md  parakeet-stt
scripts/: ask-ai.py
(+190 files in other folders)
