[project]
name = "diffuse"
version = "0.1.0"
description = "diffuse — Local diffusion image generation CLI for NVIDIA GPUs"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub",
    "hf-transfer",
    "pyyaml",
    # GPU backend: installed from vendor/ (cloned from PrismML Bonsai-Image-Demo)
    # Run: ./run.sh setup
    "prism-image-studio-backend-gpu",
    "gemlite",
    "hqq",
    # HiDream backend: transformers + accelerate + sdnq
    # FramePack also needs these (tested with transformers 4.47.x, accelerate 1.6.x)
    "transformers>=4.46.2,<4.48",
    "accelerate>=1.6.0,<1.7",
    "sdnq",
    "einops",
    "torchvision",
    # FramePack I2V backend
    "diffusers>=0.33.1,<0.34",
    "av",
    "torchsde",
    "scipy",
]

[tool.uv]
prerelease = "allow"

# Vendor deps — cloned by run.sh setup from PrismML-Eng/Bonsai-Image-Demo
[tool.uv.sources]
prism-image-studio-backend-gpu = { path = "vendor/image-studio/backend_gpu", editable = true }